@@ -1498,27 +1498,6 @@ im_ispoweroftwo( int p )
 		return( 0 );
 }
 
-int
-im_isvips( const char *filename )
-{
-	unsigned char buf[4];
-
-	if( im__get_bytes( filename, buf, 4 ) ) {
-		if( buf[0] == 0x08 && buf[1] == 0xf2 &&
-			buf[2] == 0xa6 && buf[3] == 0xb6 )
-			/* SPARC-order VIPS image.
-			 */
-			return( 1 );
-		else if( buf[3] == 0x08 && buf[2] == 0xf2 &&
-			buf[1] == 0xa6 && buf[0] == 0xb6 )
-			/* INTEL-order VIPS image.
-			 */
-			return( 1 );
-	}
-
-	return( 0 );
-}
-
 /* Test this processor for endianness. True for SPARC order.
  */
 int
